# RAG-model

./: .env.local  Copy_of_rag_using_langchain.ipynb  RAG-simple.py  README.md  agents_in_langchain.ipynb  pyproject.toml  requirements.txt  tool_calling_in_langchain.ipynb  tools_in_langchain.ipynb
